--- a/.gitignore
+++ b/.gitignore
@@ -219,6 +219,9 @@ plots/*
 !plots/README.md
 !plots/flowchart_pipeline_radio_AGN_z.pdf
 
+# json moc files
+moc_files/*.json
+
 # Catalogues of predicted sources
 pred_rAGN/*.csv
 pred_rAGN/*.h5
